--- a/index.css
+++ b/index.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans+Narrow');
+
 .button {
     width:80%;
     min-height:20vh;
     margin-bottom: 5vh;
     font-size: 36px;
     font-family:serif;
-    color:white;
     text-align:center;
     border-radius: 50px;
     border: 10px outset black;
@@ -15,7 +15,11 @@
 .button:active {
     border-style: inset;
 }
-body {text-align: center;}
+body {
+    background: black;
+    color: grey;
+    text-align: center;
+}
 #calendar {
     display: flex;
     justify-content: center;
@@ -26,12 +30,12 @@ body {text-align: center;}
 }
 #calendar>span {border: 1px solid; min-width:60px;}
 #calendar .diff {font-size: 200%;}
-.good {background-color: green;color: white;}
-.ok {background-color: goldenrod;color: white;}
-.bad {background-color: red;color: white;}
+.good {background-color: green;}
+.ok {background-color: goldenrod;}
+.bad {background-color: red;}
 #buttons:empty::before {content: "Requires javascript";}
 .buttonframe#sleep>.button {background: #008; font-weight: bold;}
-.buttonframe#wake>.button {background: #F80; font-weight: bold;}
+.buttonframe#wake>.button {background: #840; font-weight: bold;}
 .time {font-weight: normal;}
 .time.yesterday:not(:empty)::before {
     content: "↜";
@@ -54,7 +58,7 @@ body {text-align: center;}
 .sidebtn {
     width:60px;
     height: 60px;
-    border: 5px white solid;
+    border: 5px black solid;
 }
 .sidebtn:hover {border-style:outset;border-color:grey;}
 .sidebtn:active {border-style:inset;border-color:grey;}
